elastic_stack/kibana/nginx-deploy.yaml
# Copyright (C) 2018 Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Nginx Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-nginx
  namespace: wazuh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-nginx
  template:
    metadata:
      labels:
        app: wazuh-nginx
      name: wazuh-nginx
    spec:
      containers:
        - name: wazuh-nginx
          image: 'registry2.base2d.com/ops/kibana-nginx:latest'
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          ports:
            - containerPort: 80
